--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="estilos.css" />
   <title>Móveis Ecológicos</title>
 </head>
-<body>
+<body onload="trocaBanner();">
   <h1>Móvies Ecológicos S.A.</h1>
   <h2 id="mensagem"></h2>
   <ul>
