--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="principal.css" />
+  <link rel="stylesheet" 
+    href="http://netdna.bootstrappcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
   <script src="js/principal.js" defer></script>
   <title>Móveis Ecológicos</title>
 </head>
 <body onload="trocaBanner();">
-  <h1>Móvies Ecológicos S.A.</h1>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Móvies Ecológicos S.A.</h1>
   <h2 id="mensagem"></h2>
-  <ul>
-    <li>Móveis de garrafas PET</li>
-    <li>Móveis de latinhas de alumínio</li>
-    <li>Móveis de papelão</li>
+  <ul class="list-group">
+    <li class="list-group-item">Móveis de garrafas PET</li>
+    <li class="list-group-item">Móveis de latinhas de alumínio</li>
+    <li class="list-group-item">Móveis de papelão</li>
   </ul>
+    </div>
+  </div>
 </body>
 </html>
